[css] Give footer a min-height to avoid overflow during rotation of the footer image
Chrome may draw a scrollbar if the footer image overflows the footer
while it rotates. Avoid this by setting minimum footer size that leaves
enough space for the 50x50 image to rotate.

--- a/fragments/common.css
+++ b/fragments/common.css
@@ -83,6 +83,7 @@ footer {
   padding:.5rem 0;
   font-size:.833rem;
   color:#777;
+  min-height:75px;
 }
 @keyframes rotation {
   from {
